@@ -69,7 +69,7 @@ Misc.
 			[ ]  line number information
 			[ ]  data type information, etc.
 		[ ]  Don't hardcode the CPU path in GXemul.cc:
-			    LookupPath("root.machine0.mainbus0.mips_cpu0");
+			    LookupPath("root.machine0.mainbus0.cpu0");
 
 	[/]  testmips
 		[/]  Work on MIPS_CPUComponent::Run() and the generic
@@ -77,7 +77,14 @@ Misc.
 			[X]  Connect the CPU to an AddressDataBus.
 			[/]  virtual to physical translation
 			[ ]  Handling of read/write errors?
-			[ ]  Both MIPS16 and regular encoding.
+			[/]  Disassembler:
+				Given a virtual address and an instruction
+				word/buffer, return a vector of strings.
+				e.g.
+				"27bfffd0", "addiu", "sp,sp-48", "; comment"
+			[ ]  Start interpreting instructions!
+				[ ]  32-bit instruction words
+				[ ]  MIPS16
 			[ ]  Unit tests!
 		[ ]  Framebuffer device :-)
 		[ ]  Start with SMP early on.
