@@ -28,6 +28,11 @@
 #include <assert.h>
 #include "components/MIPS_CPUComponent.h"
 
+#include "opcodes_mips.h"
+
+static const char* hi6_names[] = HI6_NAMES;
+static const char* regnames[] = MIPS_REGISTER_NAMES;
+
 
 MIPS_CPUComponent::MIPS_CPUComponent()
 	: CPUComponent("mips_cpu", "MIPS")
@@ -114,6 +119,93 @@ bool MIPS_CPUComponent::VirtualToPhysical(uint64_t vaddr, uint64_t& paddr,
 }
 
 
+size_t MIPS_CPUComponent::DisassembleInstructionMIPS16(uint64_t vaddr,
+	unsigned char *instruction, vector<string>& result)
+{
+	// Read the instruction word:
+	uint16_t iword = *((uint16_t *) instruction);
+	if (m_endianness == BigEndian)
+		iword = BE16_TO_HOST(iword);
+	else
+		iword = LE16_TO_HOST(iword);
+
+	// ... and add it to the result:
+	char tmp[5];
+	snprintf(tmp, sizeof(tmp), "%04x", iword);
+	result.push_back(tmp);
+
+	// TODO
+	result.push_back("unimplemented instruction");
+
+	return sizeof(uint16_t);
+}
+
+
+size_t MIPS_CPUComponent::DisassembleInstruction(uint64_t vaddr, size_t maxLen,
+	unsigned char *instruction, vector<string>& result)
+{
+	bool mips16 = vaddr & 1? true : false;
+	size_t instrSize = mips16? sizeof(uint16_t) : sizeof(uint32_t);
+
+	if (maxLen < instrSize) {
+		assert(false);
+		return 0;
+	}
+
+	if (mips16)
+		return DisassembleInstructionMIPS16(vaddr,
+		    instruction, result);
+
+	// Read the instruction word:
+	uint32_t iword = *((uint32_t *) instruction);
+	if (m_endianness == BigEndian)
+		iword = BE32_TO_HOST(iword);
+	else
+		iword = LE32_TO_HOST(iword);
+
+	// ... and add it to the result:
+	char tmp[9];
+	snprintf(tmp, sizeof(tmp), "%08x", iword);
+	result.push_back(tmp);
+
+	int hi6 = iword >> 26;
+	int rs = (iword >> 21) & 31;
+	int rt = (iword >> 16) & 31;
+
+	switch (hi6) {
+
+	case HI6_ADDI:
+	case HI6_ADDIU:
+	case HI6_DADDI:
+	case HI6_DADDIU:
+	case HI6_SLTI:
+	case HI6_SLTIU:
+	case HI6_ANDI:
+	case HI6_ORI:
+	case HI6_XORI:
+		result.push_back(hi6_names[hi6]);
+		{
+			stringstream ss;
+			ss << regnames[rt] << "," << regnames[rs] << ",";
+			if (hi6 == HI6_ANDI || hi6 == HI6_ORI ||
+			    hi6 == HI6_XORI) {
+				ss.flags(std::ios::hex | std::ios::showbase);
+				ss << (uint16_t) iword;
+			} else {
+				ss << (int16_t) iword;
+			}
+			result.push_back(ss.str());
+		}
+		break;
+
+	default:result.push_back("unimplemented instruction");
+		break;
+	}
+
+	return instrSize;
+}
+
+
 string MIPS_CPUComponent::GetAttribute(const string& attributeName)
 {
 	if (attributeName == "stable")
@@ -150,10 +242,47 @@ static void Test_MIPS_CPUComponent_Create()
 	UnitTest::Assert("initial pc", p->ToString(), "0xffffffffbfc00000");
 }
 
+static void Test_MIPS_CPUComponent_IsCPU()
+{
+	refcount_ptr<Component> mips_cpu =
+	    ComponentFactory::CreateComponent("mips_cpu");
+	CPUComponent* cpu = mips_cpu->AsCPUComponent();
+	UnitTest::Assert("mips_cpu is not a CPUComponent?", cpu != NULL);
+}
+
+static void Test_MIPS_CPUComponent_Disassembly_Basic()
+{
+	refcount_ptr<Component> mips_cpu =
+	    ComponentFactory::CreateComponent("mips_cpu");
+	CPUComponent* cpu = mips_cpu->AsCPUComponent();
+
+	vector<string> result;
+	size_t len;
+	unsigned char instruction[sizeof(uint32_t)];
+	// This assumes that the default endianness is BigEndian...
+	instruction[0] = 0x27;
+	instruction[1] = 0xbd;
+	instruction[2] = 0xff;
+	instruction[3] = 0xd8;
+
+	len = cpu->DisassembleInstruction(0x12345678, sizeof(uint32_t),
+	    instruction, result);
+
+	UnitTest::Assert("disassembled instruction was wrong length?", len, 4);
+	UnitTest::Assert("disassembly result incomplete?", result.size(), 3);
+	UnitTest::Assert("disassembly result[0]", result[0], "27bdffd8");
+	UnitTest::Assert("disassembly result[1]", result[1], "addiu");
+	UnitTest::Assert("disassembly result[2]", result[2], "sp,sp,-40");
+}
+
 UNITTESTS(MIPS_CPUComponent)
 {
 	UNITTEST(Test_MIPS_CPUComponent_IsStable);
 	UNITTEST(Test_MIPS_CPUComponent_Create);
+	UNITTEST(Test_MIPS_CPUComponent_IsCPU);
+
+	// Disassembly:
+	UNITTEST(Test_MIPS_CPUComponent_Disassembly_Basic);
 }
 
 #endif
